src/scss/main.scss
/* ... */
footer {
	background-color: $brand-brown;
	color: $white-text;
	font-family: NunitoSans, sans-serif;
	padding-top: 15px;
	text-align: center;

	.container {
		background-image: url('../img/footer-maze.png');
		background-repeat: no-repeat;
		background-position: bottom center;
		background-size: contain;
	}

	.section-header {
		color: $white-text;
		padding-bottom: 15px;
	}
}

.sponsor-container {
	@include mq(sm) {
		display: flex;
		justify-content: space-between;
	}
}
/* we need to change this class name to benefactor so adblockers don't hide the images */
.benefactor-logo {
	display: block;
	margin: 10px auto;
	max-width: 80%;
	@include mq(sm) {
		display: inline-block;
	}
}

.container.page {
	margin: 0 auto;
	max-width: 600px;
	padding-bottom: 3em;

	.copy {
		text-align: left;
	}
}

.page-subheader {
	color: $dark-text;
	font-family: NunitoSansSemiBold, sans-serif;
	font-size: 18px;
	margin: 0 0 4px 0;
}

.featured-speaker.container {
	text-align: center;

	.img-container {
		display: block;
		vertical-align: top;
		@include mq(sm) {
			display: inline-block;
		}

		img {
			vertical-align: top;
		}
	}
	.copy-container {
		display: block;
		max-width: 640px;
		@include mq(sm) {
			display: inline-block;
		}
	}

	.copy {
		text-align: left;
	}
	.speaker-subheader {
		color: $dark-text;
    font-family: NunitoSansSemiBold, sans-serif;
		text-align: left;
		text-transform: uppercase;
	}
}

.about {
	.section-header {
		margin-bottom: 40px;
	}
}

.featured-speaker {
	.copy-container {
		//padding-left: 37px; //ZJ not sure why this was set
	    padding-top: 95px;
	}
	.img-container {
		padding-left: 17px;
	    padding-top: 41px;
	}
	.copy {
		max-width: none;
	}

}

.speaker-page-img {
	height: 150px;
	width: 150px;
}

.speaker-header {
	color: $dark-text;
	font-family: NunitoSansBold, sans-serif;
	font-size: 24px;
	margin: 0 0 2px 0;
	text-align: left;
	text-transform: uppercase;
}
.speaker-subtitle {
	color: $dark-text;
	font-family: NunitoSansLight, sans-serif;
	font-size: 18px;
	margin: 0 0 2px 0;
	text-align: left;
}
.speaker-handle {
	color: $brand-yellow;
	font-family: NunitoSans, sans-serif;
	font-size: 18px;
	margin: 0;
	text-align: left;
}
.speaker-subheader {
	font-family: NunitoSans, sans-serif;
	font-size: 18px;
	margin: 24px 0 2px 0;
}


// Location page
.location.hero {
	background-image: url('../img/hyatt-panorama.jpg');
	background-size: cover;
	background-position: bottom center;
	height: 400px;
}

//Sponsors
.container.sponsors {
	padding-top: 50px;
	padding-bottom: 150px;
}

.container.short {
	padding-top: 50px;
	padding-bottom: 150px;
}

//People
.container.people {
	padding-top: 50px;
	padding-bottom: 150px;
}

//Workshops
.workshops {
  p {
    text-align: left;
  }
}
.workshop-list {
  padding-top: 30px;
  //padding-left: 37px;
  padding-bottom: 3em;
  max-width: 640px;
  h2 {
    text-transform: uppercase;
    font-size: 24px;
    a {
      color: $brand-yellow;
      transition: color 0.2s ease 0s;
      &:hover {
        text-decoration: none;
        color: $rollover-yellow;
      }
    }
  }
  .workshops--speaker-name {
    display: block;
    color: $brand-brown;
    font-weight: bold;
    text-transform: uppercase;
    font-size: auto;
  }
  .workshops--speaker-title {
    font-style: italic;
  }
}



// CFP
.cfp-cta {
  font-family: NunitoSansExtraBold, sans-serif;
  font-size: 18px;
  margin: 0 0 4px 0;
  	a {
  		color: $brand-yellow;
  	}
}

// 'BUY TICKETS' button styles
.btn {
  background: $brand-brown;
  font-family: NunitoSansLight, sans-serif;
  border-radius: 0;
  font-family: Arial;
  color: $white-text;
  font-size: 20px;
  padding: 20px 30px 20px 30px;
  text-decoration: none;
  text-transform: uppercase;
  border: 0;
}

.btn:hover {
  text-decoration: none;
  color: $rollover-yellow;
}

/* Extra small devices (phones, less than 768px) */
/* No media query since this is the default in Bootstrap */

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) { }

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) { }

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) { }

